Snapping Bug #38409

Closed
opened 2014-01-30 15:22:29 +01:00 by Mauro Fabio · 6 comments

System Information
OSX 10.9.1
NVIDIA GeForce GT 650M 1024 MB

Blender Version
Broken: 2.69 2b55d78
Worked: 2.69 2b79382

Short description of error
Snapping onto faces does not work anymore (the vertex does not move onto the surface). In addition to this, volume snapping results in a crash.

Exact steps for others to reproduce the error
Add a cube and a plane in objectmode. Subdivide the cube in editmode severla times. Try to snap a vertex of the plane onto the faces of the cube by using face snapping. It will not work. Then try to use volume snapping. Blender will crash.

My crash-log: http://www.pasteall.org/49177

**System Information** OSX 10.9.1 NVIDIA GeForce GT 650M 1024 MB **Blender Version** Broken: 2.69 2b55d78 Worked: 2.69 2b79382 **Short description of error** Snapping onto faces does not work anymore (the vertex does not move onto the surface). In addition to this, volume snapping results in a crash. **Exact steps for others to reproduce the error** Add a cube and a plane in objectmode. Subdivide the cube in editmode severla times. Try to snap a vertex of the plane onto the faces of the cube by using face snapping. It will not work. Then try to use volume snapping. Blender will crash. My crash-log: http://www.pasteall.org/49177
Author

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Mauro Fabio 2014-01-30 15:22:29 +01:00
Author

Added subscriber: @MauroPfister

Added subscriber: @MauroPfister

This issue was referenced by blender/blender-addons-contrib@0cb49286ce

This issue was referenced by blender/blender-addons-contrib@0cb49286ce45f1b2ce16db0e174170ef2a671dba

This issue was referenced by 0cb49286ce

This issue was referenced by 0cb49286ce45f1b2ce16db0e174170ef2a671dba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0cb49286ce.

Closed by commit 0cb49286ce.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38409
No description provided.